# kou

./: .gitignore  Cargo.toml  PLAN.md  README.md  justfile
.github/workflows/: checks.yml  docs.yml  fonts-release.yml  npm-release.yml  publish.yml
.just/: celestia-devtools.just  git-bash-interop.just
docs/: lagrange.toml
docs/ar/: README.md  SUMMARY.md
docs/ar/guides/: fonts.md  graphics.md  quickstart.md
docs/en/: SUMMARY.md
docs/en/guides/: fonts.md  graphics.md  quickstart.md
docs/es/: README.md  SUMMARY.md
docs/es/guides/: fonts.md  graphics.md  quickstart.md
docs/fr/: README.md  SUMMARY.md
docs/fr/guides/: fonts.md  graphics.md  quickstart.md
docs/ja/: README.md  SUMMARY.md
docs/ja/guides/: fonts.md  graphics.md  quickstart.md
docs/ko/: README.md  SUMMARY.md
docs/ko/guides/: fonts.md  graphics.md  quickstart.md
docs/ru/: README.md  SUMMARY.md
docs/ru/guides/: fonts.md  graphics.md  quickstart.md
docs/zhs/: README.md  SUMMARY.md
docs/zhs/guides/: fonts.md  graphics.md  quickstart.md
docs/zht/: README.md  SUMMARY.md
docs/zht/guides/: fonts.md  graphics.md  quickstart.md
examples/: read_demo.rs  render_demo.rs
src/: font.rs  graphics.rs  lib.rs  main.rs  mcp.rs  pty.rs  read.rs  render.rs  screen.rs  vtty.rs
tests/: kitty_e2e.rs  mcp_smoke.rs  smoke.rs  snapshots.rs  vtty_tui.rs
tests/common/: mod.rs
